--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,3 +52,43 @@ margin: 10px 0;
     padding: 0 4%;
     text-align: center;
 }
+
+#header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+#header ul{
+    display: flex;
+    padding: 10px 0;
+}
+#header li{
+    margin-left: 30px;
+}
+#header li a{
+    color: #24292e;
+}
+#header li a:hover{
+    opacity: 0.7;
+}
+
+#mainvisual{
+    margin-bottom: 80px;
+}
+#mainvisual img{
+    width: 100%;
+    max-width: 1920px;
+    height: 600px;
+    object-fit: cover;   /* 横幅は画面サイズにあわせて伸縮します */
+}
+
+ /*　画面サイズが600pxまでのときは以下を読み込む　*/
+ @media screen and (max-width: 600px) {
+    #mainvisual img{
+        height: calc(100vh - 60px); /* 画像の高さをブラウザ下いっぱいまで広げます */
+        /* 100vh:画面の縦幅いっぱいの高さ。このままだとヘッダーの高さの分（60px）だけ */
+        /* 画面下にはみだしてしまうので -60pxすることで、画面下ちょうどでおさまるようにしている。 */
+    }
+}
+
